prevent jumping to anogher page when click a link

--- a/styles/colorChanger.css
+++ b/styles/colorChanger.css
@@ -4,9 +4,6 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, .25);
     position: absolute;
     z-index: 9999999;
-    top: 0;
-    left: 0;
-    transform: translate(-50% -50%);
     background-color: white;
     border-radius: 8px;
     overflow: hidden;
